--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,9 @@
         "vector": "cpp",
         "utility": "cpp",
         "xstring": "cpp",
-        "fstream": "cpp"
+        "fstream": "cpp",
+        "exception": "cpp",
+        "memory": "cpp",
+        "tuple": "cpp"
     }
 }
