--- a/dicionarios/Makefile
+++ b/dicionarios/Makefile
@@ -1,3 +1,2 @@
 all:
-	g++ -c end_aberto.cpp -ggdb
-	g++ -o main_endaberto.cpp main_endaberto.exe
+	g++ -o main_endaberto.cpp end_aberto.cpp ..\utils\utils.cpp main_endaberto.exe
