--- a/arvores/binaria/Makefile
+++ b/arvores/binaria/Makefile
@@ -1,2 +1,2 @@
-all:
-	g++ main.cpp node_abb.cpp abb.cpp 
+all: main.cpp node_abb.cpp abb.cpp ../../utils/utils.cpp
+	g++ -o main main.cpp node_abb.cpp abb.cpp ../../utils/utils.cpp
